<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/videoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center"
        android:divider="@android:drawable/divider_horizontal_bright" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:drawable/divider_horizontal_bright" >

        <SearchView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:iconifiedByDefault="false"
            android:imeOptions="normal"
            android:queryHint="@string/hint" />

        <Button
            android:id="@+id/choose"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/choose" />
    </RelativeLayout>

    <Button
        android:id="@+id/play"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:text="@string/play" />

    <Button
        android:id="@+id/setting"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:text="@string/settings" />
</LinearLayout>